[tool.poetry]
name = "nonebot-plugin-bangdream-chart-render"
version = "1.0.2"
description = "基于OneBot适配器的NoneBot2 BanGDream谱面渲染插件"
license = "MIT"
authors = ["Gitai <2667292003@qq.com>"]
readme = "README.md"
homepage = "https://github.com/zhaomaoniu/nonebot-plugin-bangdream-chart-render"
repository = "https://github.com/zhaomaoniu/nonebot-plugin-bangdream-chart-render"
documentation = "https://github.com/zhaomaoniu/nonebot-plugin-bangdream-chart-render#readme"
keywords = ["nonebot", "nonebot2", "bangdream", "render", "chart"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.3"
pandas = "^2.0.3"
nonebot2 = "^2.0.0"
fuzzywuzzy = "^0.18.0"
nonebot-adapter-onebot = "^2.0.0b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
